# genpybindings

./: CMakeLists.txt  stack.yaml
cmake/: genpybindings-extras.cmake.in
scripts/: CMakeLists.txt
